fixed issues w z-index and removing cat delete button

--- a/frontend/src/Dashboard/CategoryCard.css
+++ b/frontend/src/Dashboard/CategoryCard.css
@@ -11,7 +11,6 @@
     overflow-y: auto;
     display: flex;
     flex-direction: column;
-    position: relative;
   }
 
   .category-card-header {
@@ -24,10 +23,10 @@
 
   .delete-category-button {
     float: right;
+    z-index: -1;
   }
 
   .category-body-footer {
     width: 100%;
-    position: absolute; 
-    bottom: 0;
+    margin-top: auto;
   }
